--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -108,7 +108,7 @@
     <color name="bp_device_header">#F04323</color>
     <color name="ws_device_header">#2AC478</color>
     <color name="activity_device_header">#0E7BD9</color>
-    <color name="sky_blue">#9EE8F1</color>
+    <color name="sky_blue">#399DAA</color>
     <color name="th_device_header">#F09315</color>
     <color name="spo2_device_header">#12B8B8</color>
     <color name="devicepairinglabel1">#B3B3B3</color>
