--- a/app/src/main/res/layout/activity_main_temp.xml
+++ b/app/src/main/res/layout/activity_main_temp.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txtmainweight"
+            android:id="@+id/txtmainheight"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -27,7 +27,7 @@
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/txtmainheight"
+            android:id="@+id/txtmainweight"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -267,7 +267,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text=" Ferenhit"
+                        android:text=" F"
                         android:visibility="visible"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@color/white"
