--- a/app/src/main/res/layout/actofit_main_activity.xml
+++ b/app/src/main/res/layout/actofit_main_activity.xml
@@ -465,7 +465,6 @@
 
 
                     <Switch
-                        android:id="@+id/switchbtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -478,6 +477,34 @@
 
                 </LinearLayout>
 
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/round_edittext"
+                    android:orientation="horizontal"
+                    android:layout_gravity="right"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_edtpro_hight">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Athlete Mode"
+                        android:textColor="#111111"
+                        android:textSize="16sp" />
+
+                    <Switch
+                        android:id="@+id/switchbtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:textOff="OFF"
+                        android:textOn="ON" />
+
+                </LinearLayout>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:src="@drawable/weightscale"
