--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -46,18 +46,6 @@
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
-            <TextView
-                android:id="@+id/txtmainpulseoximeter"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
-                android:background="@drawable/repeat"
-                android:gravity="center"
-                android:padding="@dimen/pad5"
-                android:text="Pulse Oximeter"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/txtmaintempreture"
@@ -72,6 +60,18 @@
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
+            <TextView
+                android:id="@+id/txtmainpulseoximeter"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad10"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:padding="@dimen/pad5"
+                android:text="Pulse Oximeter"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
             <TextView
                 android:id="@+id/txtmainbloodpressure"
                 android:layout_width="wrap_content"
@@ -189,11 +189,12 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="40dp"
             android:orientation="vertical"
             android:scrollbarAlwaysDrawVerticalTrack="true">
             <TextView
