--- a/app/src/main/res/layout/glucose_layout.xml
+++ b/app/src/main/res/layout/glucose_layout.xml
@@ -17,10 +17,11 @@
             android:id="@+id/tv_resultText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5sp"
+            android:layout_marginTop="10dp"
             android:text=""
             android:textColor="@color/white"
-            android:textSize="5sp"
+            android:textSize="35sp"
+            android:visibility="visible"
             android:layout_gravity="center"/>
 
 
@@ -32,6 +33,7 @@
             android:text=""
             android:textColor="@color/white"
             android:textSize="35sp"
+            android:visibility="gone"
             android:layout_gravity="center"/>
 
 
