--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -285,10 +285,12 @@
                     android:orientation="vertical"
                     android:layout_marginTop="30dp">
                     <Button
+                        android:id="@+id/btnScan"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="Scan"
                         android:textColor="#fff"
+                        android:visibility="gone"
                         android:textSize="18sp"
                         android:layout_marginRight="2dp"
                         android:shadowColor="#A8A8A8"
