--- a/app/src/main/res/layout/activity_otp_login_screen.xml
+++ b/app/src/main/res/layout/activity_otp_login_screen.xml
@@ -35,12 +35,12 @@
             android:textSize="25sp"
             android:gravity="center"
             android:imeOptions="actionDone"
-            android:id="@+id/etMobile"
+            android:id="@+id/et_mobile_number"
             android:inputType="number"
             android:layout_height="50dp" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:background="@drawable/greenbg"
             android:layout_margin="20dp"
