--- a/app/src/main/res/layout/activity_otp_verify_screen.xml
+++ b/app/src/main/res/layout/activity_otp_verify_screen.xml
@@ -56,7 +56,7 @@
             android:visibility="gone" />
 
         <EditText
-            android:id="@+id/etMobile"
+            android:id="@+id/et_mobile_number"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_margin="5dp"
@@ -71,7 +71,7 @@
             android:textSize="25sp" />
 
         <EditText
-            android:id="@+id/etName"
+            android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_margin="5dp"
@@ -86,7 +86,7 @@
             android:textSize="25sp" />
 
         <EditText
-            android:id="@+id/etDOB"
+            android:id="@+id/et_date_of_birth"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_margin="5dp"
@@ -104,7 +104,7 @@
             android:textSize="25sp" />
 
         <EditText
-            android:id="@+id/etEmail"
+            android:id="@+id/et_email_id"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_margin="5dp"
@@ -123,7 +123,7 @@
             android:weightSum="2"
             android:orientation="horizontal"
             android:layout_weight="2"
-            android:id="@+id/genderradio"
+            android:id="@+id/rg_gender"
             android:layout_height="wrap_content">
 
             <RadioButton
@@ -132,7 +132,7 @@
                 android:layout_margin="5dp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:id="@+id/malebutton"
+                android:id="@+id/rb_male_button"
                 android:textSize="25sp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_radiobutton"
@@ -146,7 +146,7 @@
                 android:background="@drawable/custom_radiobutton"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:id="@+id/femalebutton"
+                android:id="@+id/rb_female_button"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="25sp"
