--- a/app/src/main/res/layout/activity_verify_otp_with_user.xml
+++ b/app/src/main/res/layout/activity_verify_otp_with_user.xml
@@ -88,7 +88,7 @@
             android:layout_height="50dp" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btn_submit"
             android:layout_width="match_parent"
             android:background="@drawable/greenbg"
             android:layout_margin="20dp"
